chore: adds status filter to project tasks api
